# CE-PiicoDev-QMC6310-MicroPython-Module

./: PiicoDev_QMC6310.py  README.md  calibration.cal  calibrationScript.m  main.py  pyproject.toml
.github/workflows/: main.yml
CE-PiicoDev-QMC6310-MicroPython-Module-main/: PiicoDev_QMC6310.py
CE-PiicoDev-QMC6310-MicroPython-Module-main/example/: graphicalCompass.py
CE-PiicoDev-QMC6310-MicroPython-Module-main/min/: PiicoDev_QMC6310.py
example/: calibrated data.py  compass.py  detectMagnet.py  graphicalCompass.py  graphicalCompassNoText.py  magnet detector.py  rawData.py  selftest.py  temp.py
min/: PiicoDev_QMC6310.py  PiicoDev_SSD1306.py  README.md
